--- a/app/src/main/res/layout/activity_enviar_mostrar_gastos.xml
+++ b/app/src/main/res/layout/activity_enviar_mostrar_gastos.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Nombre Producto"
+        android:hint="Nombre Producto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,7 +38,7 @@
         android:layout_marginTop="28dp"
         android:ems="10"
         android:inputType="number"
-        android:text="Precio"
+        android:hint="Precio"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editNombreGasto" />
@@ -46,8 +46,11 @@
     <ListView
         android:id="@+id/listMostrarGastos"
         android:layout_width="405dp"
-        android:layout_height="522dp"
+        android:layout_height="450dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnEnviarGastos" />
@@ -57,8 +60,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:itemBackground="@color/cardview_dark_background"
-        app:itemIconTint="@drawable/selector"
-        app:itemTextColor="@drawable/selector"
+        app:itemIconTint="@color/platead"
+        app:itemTextColor="@color/platead"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:menu="@menu/menu_navigation"
