--- a/app/src/main/res/layout/activity_multimedia.xml
+++ b/app/src/main/res/layout/activity_multimedia.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo2"
     tools:context=".MultimediaActivity">
 
 
@@ -12,6 +11,7 @@
         android:id="@+id/buttonCerrarSesion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
         android:layout_marginBottom="20dp"
         android:drawableLeft="@drawable/exiticon2"
         android:text="Cerrar Sesion"
@@ -26,11 +26,12 @@
         android:id="@+id/btnPerfil"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
         android:layout_marginBottom="20dp"
         android:drawableLeft="@drawable/ic_stat_ic_notification"
         android:onClick="Perfil"
         android:text="Perfil"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/primary_text_dark"
         app:backgroundTint="#007C52"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toStartOf="@+id/buttonCerrarSesion"
@@ -44,11 +45,11 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/ovalo"
+        android:backgroundTint="#007C52"
         android:drawableLeft="@drawable/mapa"
         android:onClick="MapaInteres"
-
         android:text="Lugares de interes"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/primary_text_dark"
         app:layout_constraintEnd_toStartOf="@+id/btnEventos"
         app:layout_constraintHorizontal_bias="0.443"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,11 +62,11 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="40dp"
         android:background="@drawable/ovalo"
+        android:backgroundTint="#007C52"
         android:drawableLeft="@drawable/eventos2"
         android:onClick="EventosLink"
         android:text="Eventos"
-
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/primary_text_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
@@ -73,13 +74,14 @@
         android:id="@+id/btnGaleria"
         android:layout_width="139dp"
         android:layout_height="91dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/ovalo"
+        android:backgroundTint="#007C52"
         android:drawableLeft="@drawable/galeria"
         android:onClick="GaleriaLink"
         android:text="Galeria de fotos"
-        android:textColor="@android:color/white"
 
+        android:textColor="@android:color/primary_text_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.852"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,14 +91,16 @@
         android:id="@+id/btnMapaReservas"
         android:layout_width="139dp"
         android:layout_height="91dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/ovalo"
+        android:backgroundTint="#007C52"
         android:drawableLeft="@drawable/mapa"
         android:onClick="MapaReservas"
         android:text="Mapa Interactivo"
-        android:textColor="@android:color/white"
 
+        android:textColor="@android:color/primary_text_dark"
+        app:layout_constraintEnd_toStartOf="@+id/btnGaleria"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnMapaInteres" />
 
