--- a/app/src/main/res/drawable/ovalo.xml
+++ b/app/src/main/res/drawable/ovalo.xml
@@ -3,7 +3,8 @@
     android:shape="rectangle">
     <size
         android:width="300dp"
-        android:height="100dp"/>
+        android:height="100dp"
+        />
     <corners
         android:radius="15dp"/>
     <stroke
