--- a/app/src/main/res/layout/activity_acciones_admin.xml
+++ b/app/src/main/res/layout/activity_acciones_admin.xml
@@ -13,9 +13,9 @@
 
     <Button
         android:id="@+id/btnAdministrarEventos"
-        android:layout_width="144dp"
-        android:layout_height="121dp"
-        android:layout_marginStart="32dp"
+        android:layout_width="122dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="52dp"
         android:background="#FFFFFF"
         android:drawableLeft="@drawable/eventos2"
@@ -26,42 +26,46 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <Button
         android:id="@+id/btnCambiarFecha"
-        android:layout_width="144dp"
-        android:layout_height="121dp"
+        android:layout_width="122dp"
+        android:layout_height="90dp"
         android:layout_marginTop="52dp"
-        android:layout_marginEnd="48dp"
+        android:layout_marginEnd="40dp"
         android:drawableLeft="@android:drawable/ic_menu_my_calendar"
+        android:elevation="2dp"
         android:onClick="CambiarFechaAdmin"
         android:text="Cambiar fechas"
-        android:elevation="2dp"
         android:textColor="@android:color/white"
         app:backgroundTint="#7fadca"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/btnAdministrarEventos"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <Button
         android:id="@+id/btnGestionGastos"
-        android:layout_width="144dp"
-        android:layout_height="121dp"
+        android:layout_width="122dp"
+        android:layout_height="90dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="48dp"
+        android:layout_marginEnd="40dp"
         android:drawableLeft="@drawable/dinero"
         android:onClick="GestionGastos"
         android:text="Gastos"
         android:textColor="@android:color/white"
         app:backgroundTint="#7fadca"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/btnMostrarReservas"
         app:layout_constraintTop_toBottomOf="@+id/btnCambiarFecha" />
 
     <Button
         android:id="@+id/btnMostrarReservas"
-        android:layout_width="144dp"
-        android:layout_height="121dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="122dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="40dp"
         android:drawableLeft="@drawable/reservas"
         android:onClick="GestionReservas"
         android:text="Reservas"
@@ -72,16 +76,16 @@
 
     <Button
         android:id="@+id/btnAddGalery"
-        android:layout_width="144dp"
-        android:layout_height="121dp"
+        android:layout_width="131dp"
+        android:layout_height="86dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="136dp"
         android:drawableLeft="@android:drawable/ic_menu_upload"
         android:onClick="SendImages"
         android:text="Subir Imagenes"
         android:textColor="@android:color/white"
         app:backgroundTint="#7fadca"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnMostrarReservas" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
