--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -116,11 +116,11 @@
 
     <Button
         android:id="@+id/buttonContacta"
-        android:layout_width="139dp"
-        android:layout_height="91dp"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
         android:layout_marginStart="28dp"
-        android:layout_marginBottom="28dp"
-        android:drawableTop="@drawable/casa"
+        android:layout_marginBottom="16dp"
+        android:drawableTop="@android:drawable/stat_sys_phone_call"
         android:onClick="ContactarLink"
         android:text="Contacto"
         android:textColor="@android:color/white"
