--- a/app/src/main/res/layout/activity_mostrar_reservas.xml
+++ b/app/src/main/res/layout/activity_mostrar_reservas.xml
@@ -8,9 +8,9 @@
 
     <ListView
         android:id="@+id/listviewReservas"
-        android:layout_width="match_parent"
-        android:layout_height="600dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="409dp"
+        android:layout_height="541dp"
+        android:layout_marginTop="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,19 +25,18 @@
         app:itemTextColor="@drawable/selector"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:menu="@menu/menu_navigation"
-        />
+        app:menu="@menu/menu_navigation" />
 
     <EditText
         android:id="@+id/buscador"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:hint="Buscador"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.136"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
