--- a/app/src/main/res/layout/activity_reservas.xml
+++ b/app/src/main/res/layout/activity_reservas.xml
@@ -83,7 +83,8 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Fecha Entrada"
-        android:inputType="date"
+        android:enabled="false"
+        android:inputType="none"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editDNI" />
@@ -95,7 +96,8 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Fecha Salida"
-        android:inputType="date"
+        android:enabled="false"
+        android:inputType="none"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editFechaInicio" />
@@ -151,7 +153,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="#007C52"
         android:drawableLeft="@drawable/ic_stat_ic_notification"
         android:onClick="EnviarReserva"
@@ -192,7 +194,7 @@
         android:layout_width="86dp"
         android:layout_height="50dp"
         android:layout_marginTop="56dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="#007C52"
         android:drawableTop="@android:drawable/ic_dialog_info"
         android:onClick="Informacion"
