--- a/app/src/main/res/layout/activity_send_images.xml
+++ b/app/src/main/res/layout/activity_send_images.xml
@@ -35,16 +35,14 @@
 
     <Button
         android:id="@+id/button_upload1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/bottom_navigation"
-        android:layout_below="@+id/image_view1"
-        android:layout_alignParentStart="true"
+        android:layout_alignStart="@+id/button_upload1"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="259dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="38dp"
-        android:layout_marginBottom="17dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="14dp"
         android:backgroundTint="#7fadca"
         android:drawableLeft="@android:drawable/stat_sys_upload"
         android:text="Publicar"
